added flag backgrounds

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "TSpanish Word Tab",
+    "name": "Spanish Word Tab",
     "description": "A chrome new tab extension that displays a random Spanish word and its translation",
     "version": "0.0.0.1",
     "chrome_url_overrides" : {
